# conty-backend-challenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  knexfile.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
submissions/ErickJ3/pix/: .env.example  Cargo.toml  Dockerfile  README_LOCAL.md  docker-compose.yml
submissions/ErickJ3/pix/migrations/: 20251004192039_create_payouts_table.sql
submissions/ErickJ3/pix/src/: app.rs  config.rs  main.rs  model_test.rs  models.rs  state.rs
submissions/ErickJ3/pix/src/api/: handlers.rs
submissions/ErickJ3/pix/src/repository/: mod.rs  payout_repository.rs  payout_repository_test.rs
submissions/ErickJ3/pix/src/services/: idempotency_service.rs  mod.rs  pubsub_service.rs
submissions/ErickJ3/pix/src/workers/: mod.rs  payout_worker.rs
submissions/RoyMusthang/: .env.example  README_LOCAL.md  docker-compose.yml  go.mod
submissions/RoyMusthang/migrations/: migration.go
submissions/abeatrizsc/reco/: README_LOCAL.md  docker-compose.yml  package-lock.json  package.json  (+1 more)
submissions/antoniobet/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
submissions/igorpardinho/: README_LOCAL.md
submissions/leandroxzq/: README.md
submissions/luizcastro/: README_LOCAL.md
submissions/pedro-alvesjr/: README_LOCAL.md  main.py  requirements.txt
submissions/renanzitoo/: Dockerfile  README_LOCAL.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
submissions/{seu-github}/: main.py
(+185 files in other folders)
